2008-08-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/realmedia/rdtdepay.c: (gst_rdt_depay_class_init),
	(gst_rdt_depay_finalize), (gst_rdt_depay_setcaps),
	(gst_rdt_depay_push), (gst_rdt_depay_handle_data),
	(gst_rdt_depay_chain), (gst_rdt_depay_change_state):
	* gst/realmedia/rdtdepay.h:
	Use new RDT parsing helper functions.
	Copy discont flags correctly.
	Push the header from the chain function instead of the setcaps function.
	Copy incomming timestamp to the output buffers instead of doing magic
	with the RDT timestamps.

2008-08-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/realmedia/Makefile.am:
	* gst/realmedia/gstrdtbuffer.c: (gst_rdt_buffer_validate_data),
	(gst_rdt_buffer_validate), (gst_rdt_buffer_get_packet_count),
	(read_packet_header), (gst_rdt_buffer_get_first_packet),
	(gst_rdt_packet_move_to_next), (gst_rdt_packet_get_type),
	(gst_rdt_packet_get_length), (gst_rdt_packet_to_buffer),
	(gst_rdt_buffer_compare_seqnum), (gst_rdt_packet_data_get_seq),
	(gst_rdt_packet_data_peek_data),
	(gst_rdt_packet_data_get_stream_id),
	(gst_rdt_packet_data_get_timestamp):
	* gst/realmedia/gstrdtbuffer.h:
	Add first support for parsing RDT messages.

	* gst/realmedia/rdtjitterbuffer.c: (rdt_jitter_buffer_class_init),
	(rdt_jitter_buffer_init), (rdt_jitter_buffer_finalize),
	(rdt_jitter_buffer_new), (rdt_jitter_buffer_reset_skew),
	(calculate_skew), (rdt_jitter_buffer_insert),
	(rdt_jitter_buffer_pop), (rdt_jitter_buffer_peek),
	(rdt_jitter_buffer_flush), (rdt_jitter_buffer_num_packets),
	(rdt_jitter_buffer_get_ts_diff):
	* gst/realmedia/rdtjitterbuffer.h:
	Add first version of an RDT jitterbuffer.

2008-08-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_init),
	(find_seek_offset_time), (gst_rmdemux_reset), (gst_rmdemux_chain),
	(gst_rmdemux_parse_mdpr), (gst_rmdemux_descramble_cook_audio),
	(gst_rmdemux_descramble_dnet_audio),
	(gst_rmdemux_parse_video_packet), (gst_rmdemux_parse_audio_packet):